package iterator;

public interface IAgregate {
    IIterator createIIterator();
}
