package iterator;

public interface IIterator {
    boolean hasNext();
    Book next();
}
