public interface IObserver {
    public void update(String data);
}
